--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,25 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <TextView
+    <ListView
+        android:id="@+id/lvFriendList"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Friendifyer"
-        android:textSize="50dp"
-        android:layout_gravity="center"
-        />
+        android:layout_height="wrap_content">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="50dp"
-        android:width="200dp"
-        android:onClick="onClickFriends"
-        android:text="Friends"
-        android:textSize="30dp" />
+        <LinearLayout
+            android:layout_width="47dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+        </LinearLayout>
+    </ListView>
+
 </LinearLayout>
