--- a/app/src/main/res/layout/activity_friend.xml
+++ b/app/src/main/res/layout/activity_friend.xml
@@ -8,11 +8,20 @@
 
     <ImageView
         android:id="@+id/profile_image"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/no_profile"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:src="@drawable/no_profile" />
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/profile_image"
+        android:layout_marginLeft="150dp"
+        android:text="Take Photo"
+        android:textSize="10dp"
+        android:onClick="onPhotoClick"/>
 
     <TextView
         android:id="@+id/scode_profile"
