--- a/app/src/main/res/layout/activity_friend.xml
+++ b/app/src/main/res/layout/activity_friend.xml
@@ -53,6 +53,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/name_place"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Full Name"
@@ -86,6 +87,7 @@
             android:layout_marginStart="70dp">
 
             <TextView
+                android:id="@+id/number_place"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Phone Number"
@@ -139,6 +141,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/bestfriend_place"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Best Friend"
@@ -161,6 +164,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <TextView
+                    android:id="@+id/confirm_edit_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Confirm Edit?"
