--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -13,7 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
 
 
@@ -56,9 +56,9 @@
             android:id="@+id/isBestFriend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="15dp"
             android:layout_alignParentRight="true"
-            android:text=""/>
+            android:padding="15dp"
+            android:text="" />
     </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
