--- a/app/src/main/res/layout/activity_friend.xml
+++ b/app/src/main/res/layout/activity_friend.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FriendActivity">
+    tools:context=".FriendActivity"
+    tools:ignore="OnClick">
 
 
     <ImageView
@@ -17,13 +18,14 @@
 
 
     <Button
-        android:layout_width="100dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/profile_image"
         android:layout_marginLeft="150dp"
         android:text="Take Photo"
         android:textSize="10dp"
-       />
+        android:onClick="onClickPhoto"/>
+
 
 
     <TextView
